# eventide

./: Cargo.toml
crates/syzygy_core/: Cargo.toml
crates/syzygy_core/src/: dispatch.rs  effect_bus.rs  lib.rs  permission.rs  resource.rs  role.rs  spawn.rs  syzygy.rs
crates/syzygy_core/src/context/: async.rs  event.rs  mod.rs  thread.rs
crates/syzygy_core/src/model/: mod.rs  sync.rs  unsync.rs
crates/syzygy_derive/: Cargo.toml
crates/syzygy_derive/src/: context.rs  dispatch.rs  event_bus.rs  lib.rs  models.rs  permission.rs  resources.rs  role.rs  spawn.rs
crates/syzygy_derive/tests/: context.rs  lib.rs  role.rs
eventide-derive/: Cargo.toml
eventide-derive/src/: event.rs
src/: bind.rs  dispatch.rs  effect_bus.rs  effects.rs  error.rs  errors.rs  eve.rs  event.rs  event_bus.rs  lib.rs  reactive.rs  resource.rs  spawn.rs  subscription.rs  syzygy.rs
src/context/: async.rs  effect.rs  event.rs  mod.rs  thread.rs
src/model/: mod.rs  sync.rs  unsync.rs
