[workspace]

members = [
    "crates/syzygy_core",
    "crates/syzygy_derive",
]

[workspace.dependencies]
thiserror = "1.0"
rustc-hash = "2"
rayon = { version = "1.10" }
tokio = { version = "1.4", features = ["rt", "sync"] }
crossbeam-channel = "0.5"
downcast-rs = "1.2"
log = "0.4"
parking_lot = "0.12"
