[workspace]

members = [
    "crates/syzygy_core",
    "crates/syzygy_derive",
]

[package]
name = "syzygy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["unsync"]
async = ["syzygy-core/async"]
parallel = ["syzygy-core/parallel"]
sync = ["syzygy-core/sync"]
unsync = ["syzygy-core/unsync"]

[dependencies]
syzygy-core = { path = "crates/syzygy_core", version = "0.1.0" }
syzygy-derive = { path = "crates/syzygy_derive", version = "0.1.0" }

[workspace.dependencies]
thiserror = "1.0"
rustc-hash = "2"
rayon = { version = "1.10" }
tokio = { version = "1.4", features = ["rt", "sync"] }
crossbeam-channel = "0.5"
downcast-rs = "1.2"
log = "0.4"
parking_lot = "0.12"
